功能代码提交